--- a/partie.css
+++ b/partie.css
@@ -6,12 +6,19 @@ body {
 
 #title {
     margin-top: 10px;
+    margin-left: 20px ;
 }
+
+#gameId {
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
 
 #game {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 #infosGame {
@@ -25,9 +32,7 @@ body {
 #homePlayerGame {
     border: 2px solid black;
 }
-#idHomePlayer, #idRemotePlayer {
-    margin-bottom: 0;
-}
+
 #canvasHomePlayer, #canvasRemotePlayer {
     display: flex;
     justify-content: center;
